syntax = "proto3";
package cross.cdt;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/datachainlab/cross-cdt/x/cdt/types";
option (gogoproto.goproto_getters_all) = false;

enum CDTType {
  option (gogoproto.goproto_enum_prefix) = false;

  CDT_TYPE_UNKNOWN = 0;
  CDT_TYPE_INT64   = 1;
  CDT_TYPE_GSET    = 2;
}

message AnyOPs {
  repeated google.protobuf.Any ops = 1 [(gogoproto.nullable) = false];
}

message AnyCDTState {
  google.protobuf.Any state = 1 [(gogoproto.nullable) = false];
}
